--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack",
+    "develop": "node ./scripts/webpack-dev-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,6 +20,7 @@
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "html-webpack-plugin": "^2.30.1",
+    "webpack-dev-server": "^2.11.1",
     "ts-loader": "^3.4.0"
   }
 }
