--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack",
+    "develop": "node ./scripts/webpack-dev-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,7 +19,12 @@
   "devDependencies": {
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "css-loader": "^0.28.9",
     "html-webpack-plugin": "^2.30.1",
-    "ts-loader": "^3.4.0"
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "style-loader": "^0.20.1",
+    "ts-loader": "^3.4.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
