--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@storybook/react": "^3.3.12",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "@types/storybook__react": "^3.0.6",
     "babel-core": "^6.26.0",
     "css-loader": "^0.28.9",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "style-loader": "^0.20.1",
+    "svg-sprite-loader": "^3.6.2",
     "ts-loader": "^3.4.0",
     "webpack-dev-server": "^2.11.1"
   }
